--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My First Website</title>
+        <title>Not my first website</title>
     </head>
-    <body>
-       Hello, World, and welcome to my first website!
+    <body style="color:Thistle;">
+       Hello, World, this is not my first website but welcome anyway.
     </body>
 </html>
