--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color:Plum;">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Not my first website</title>
     </head>
-    <body style="color:Thistle;">
+    <body style="color:White;">
        Hello, World, this is not my first website but welcome anyway.
     </body>
 </html>
