--- a/index.html
+++ b/index.html
@@ -1,25 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" style="background-color:PaleVioletRed;">
     <head>
-		<style>
-		body {
-			color: white;
-			font-family: verdana;
-		}
-		
-		</style>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Not my first website</title>
-    </head>
-    <body>
-	<h2><b>
-       Hello, World, this is not my first website but welcome anyway.
-	   </b>
-	   </h2>
-	<h3>
-	Not trying to show off but I am a web designer after all lol
-	</h3>
-	<h5>I hope you can manage to teach me something I don't know yet, but no pressure</h5>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="author" content="Vi Lanza">
+		<title>Vi Lanza | Web Technician</title>
+	</head>
+	<body>
+		<p>Hello World, this is not my first website</p>
+		<p>More content to come.</p>
     </body>
 </html>
